# CloudBytes.dev

./: .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  LICENSE.md  Makefile  README.md  addons.py  content  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  firebase.json  images  minify.py  pelicanconf.py  publishconf.py  pyproject.toml  pytest.ini  requirements.txt  seo-audit-cloudbytes-dev-2026-04-25.md  settings.py  sitemap.py  tasks.py
.agents/skills/: frontend-design  seo-expert
.claude/: skills
.devcontainer/: Dockerfile  devcontainer.json
.forestry/: settings.yml
.github/scripts/: prepare-test-env.sh
.github/workflows/: codeql-analysis.yml  codeql.yml  firebase-hosting-pull-request.yml  ghpage.yml  preview.yml  workflow.yml
.scripts/: manage-skills.sh
app/: pelicanconf.py  publishconf.py
calepin/: pelicanconf.py  publishconf.py
calepin/hooks/: sitemap.py
content/articles/: 0001 create-a-python-virtual-environment.md  (+77 more)
design/: naming-guide.md
hooks/: minify.py
output/: archives.html  authors.html  categories.html  index.html  tags.html
plugins/: fix_sitemap.py  minify.py  search.py
resources/: Intro.md  backup_courses.csv  courses.csv  pelican-requirements.txt  text_requirements.txt
tests/: internal_links.py  test_base.py  test_homepage.py  test_internal_links.py  test_metadata.py  test_pages.py  test_pagination.py  twillio.py
web/: .env  .env.example  .env.local.example  .gitignore  .prettierrc  README.md  TASK.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts
(+511 files in other folders)
