[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Rehan Haider", email = "email@rehanhaider.com"},
]
dependencies = [
    "pelican[markdown]~=4.7",
    "pelican-sitemap~=1.0",
    "pelican-tag-cloud~=1.0",
    "pelican-related-posts~=1.0",
    "algoliasearch==2.6.0",
    "minify-html==0.6.10",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
